# rtic-sync-bug

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
